Mobile text overflow correction

--- a/mobile.css
+++ b/mobile.css
@@ -157,11 +157,14 @@
 
     #name, #intro, #frase, .title, #phoneNumber, .containerSubtitle {
         text-shadow: none !important; 
+        white-space: wrap !important;
 
         text-shadow: 1px 1px 2px rgba(0,0,0,1.5) !important; 
     }
     
-    
+    #triangle-title {
+        font-size: 7.9vw !important;
+    }
 
     #name {
         font-size: 32px !important; 
